k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cine-sangeet
  namespace: cine-sangeet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cine-sangeet
  template:
    metadata:
      labels:
        app: cine-sangeet
    spec:
      serviceAccountName: cine-sangeet-sa
      containers:
        - name: cine-sangeet
          image: meghasm10304/cinesangeet:v5
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          startupProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
