k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cine-sangeet-service
  namespace: cine-sangeet
spec:
  type: NodePort
  selector:
    app: cine-sangeet
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
